mejoras en la pagina de formulas

--- a/formulas.html
+++ b/formulas.html
@@ -30,37 +30,37 @@
 
         <main>
             <section id="formulas-principales">
-                <article>
-                    <h2>Fuerza</h2>
-                    <p>La fuerza se calcula con la fórmula:</p>
-                    <p><strong>F = m × a</strong></p>
-                    <p>donde <em>F</em> es fuerza en Newtons (N), <em>m</em> es masa en kilogramos (kg), y <em>a</em> es
-                        aceleración en metros por segundo cuadrado (m/s²).</p>
-                </article>
+                <h2>Fórmulas según la Segunda Ley de Newton</h2>
+                <p>Estas fórmulas permiten calcular fuerza, masa o aceleración a partir de los otros dos valores.</p>
 
-                <article>
-                    <h2>Masa</h2>
-                    <p>La masa se puede calcular despejando:</p>
-                    <p><strong>m = F / a</strong></p>
-                </article>
-
-                <article>
-                    <h2>Aceleración</h2>
-                    <p>La aceleración se puede calcular como:</p>
-                    <p><strong>a = F / m</strong></p>
-                </article>
-
-                <article>
-                    <h2>Tiempo (conceptual)</h2>
-                    <p>El tiempo está relacionado con el movimiento, pero no se calcula directamente en esta fórmula.
-                    </p>
-                </article>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Cálculo</th>
+                            <th>Fórmula</th>
+                            <th>Variables</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td><strong>Fuerza (F)</strong></td>
+                            <td><code>F = m × a</code></td>
+                            <td>F: Newtons (N), m: kilogramos (kg), a: m/s²</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Masa (m)</strong></td>
+                            <td><code>m = F / a</code></td>
+                            <td>F: Newtons (N), a: m/s²</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Aceleración (a)</strong></td>
+                            <td><code>a = F / m</code></td>
+                            <td>F: Newtons (N), m: kilogramos (kg)</td>
+                        </tr>
+                    </tbody>
+                </table>
             </section>
 
-            <section>
-                <canvas id="canvas-formulas" width="400" height="150"
-                    style="background:#fff; border:1px solid #ccc; margin-top:20px;"></canvas>
-            </section>
         </main>
 
     </div>
