modificaciones de ortografia

--- a/formulas.html
+++ b/formulas.html
@@ -38,24 +38,24 @@
                         <tr>
                             <th>Cálculo</th>
                             <th>Fórmula</th>
-                            <th>Variables</th>
+                            <th>Unidades</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
                             <td><strong>Fuerza (F)</strong></td>
                             <td><code>F = m × a</code></td>
-                            <td>F: Newtons (N), m: kilogramos (kg), a: m/s²</td>
+                            <td>F: Newtons (N) -> m: kilogramos (kg) . a: m/s²</td>
                         </tr>
                         <tr>
                             <td><strong>Masa (m)</strong></td>
                             <td><code>m = F / a</code></td>
-                            <td>F: Newtons (N), a: m/s²</td>
+                            <td>Kilogramos (kg)</td>
                         </tr>
                         <tr>
                             <td><strong>Aceleración (a)</strong></td>
                             <td><code>a = F / m</code></td>
-                            <td>F: Newtons (N), m: kilogramos (kg)</td>
+                            <td>Metros por segundo al cuadrado (m/s²)</td>
                         </tr>
                     </tbody>
                 </table>
