comentarios en las funciones Js

--- a/formulas.html
+++ b/formulas.html
@@ -45,7 +45,7 @@
                         <tr>
                             <td><strong>Fuerza (F)</strong></td>
                             <td><code>F = m × a</code></td>
-                            <td>F: Newtons (N)</td>
+                            <td>Newtons (N)</td>
                         </tr>
                         <tr>
                             <td><strong>Masa (m)</strong></td>
