agrego caption en table e identacion en contacto

--- a/contacto.html
+++ b/contacto.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="author" content="Catalina Rubies">
     <meta name="description" content="Página de contacto para consultas y mensajes">
+    <meta name="keywords" content="contacto, mensaje, física, consultas, formulario">
     <title>Contacto - Rubies, Catalina</title>
     <link rel="stylesheet" href="estilo.css">
     <link rel="icon" href="Imagenes/favicon.png" type="image/png">
