--- a/formulas.html
+++ b/formulas.html
@@ -34,6 +34,7 @@
                 <p>Estas fórmulas permiten calcular fuerza, masa o aceleración a partir de los otros dos valores.</p>
 
                 <table>
+                    <caption>Fórmulas para calcular fuerza, masa y aceleración</caption>
                     <thead>
                         <tr>
                             <th>Cálculo</th>
